# selectdefaultapplication-Qt6

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp  sda-qt6.desktop  selectdefaultapplication.cpp  selectdefaultapplication.h  xdgmimeapps.cpp  xdgmimeapps.h
